[package]
name = "ping-pong-meta"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"
publish = false

[dependencies.ping-pong]
path = ".."

[dependencies.dharitri-sc-meta-lib]      
version = "1.17.2"

# [dependencies.dharitri-sc-meta-lib]
# path = "/home/dugong/Documents/my_works-main/rs-sdks/drt-rs-sdk-0.56.1-v1/framework/meta-lib"